# writing

./: .gitignore  PLAN.md  flake.nix  ssg.cabal
app/: Main.hs
config/: formats.json  haskell-preamble.hs  python-preamble.py
js/: package-lock.json  package.json
js/src/: SearchResult.jsx  format.js  index.jsx
posts/: haskell-monad-transformers.md  hello-world.md  simple-template-haskell.md
src/SSG/: App.hs  Build.hs  CodeValidator.hs  Config.hs  Post.hs  Render.hs
src/Site/: Layout.hs
src/Site/Components/: KaTeX.hs  Nav.hs  PostCard.hs  Tags.hs
src/Site/Pages/: Archive.hs  Home.hs  Post.hs  Search.hs
src/Site/Utils/: Format.hs
src/Utils/: FileSystem.hs  Format.hs  Log.hs  TH.hs
static/css/: style.css
static/js/: katex-init.js
