cabal-version:  3.0
name:           ssg
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
    SSG.App
    SSG.Post
    SSG.Render
    SSG.Build
    SSG.Config
    SSG.CodeValidator
    Utils.Log
    Utils.TH
    Site.Layout
    Site.Pages.Home
    Site.Pages.Post
    Site.Pages.Archive
    Site.Pages.Search
    Site.Components.PostCard
    Site.Components.Tags
    Site.Components.KaTeX
    Site.Components.Nav
    Utils.FileSystem
    Utils.Format
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    , base                  >= 4.12 && < 5
    , mtl
    , async
    , text
    , aeson
    , template-haskell
    , yaml
    , pandoc               >= 3.0
    , pandoc-types         >= 1.23
    , lucid2
    , filepath
    , directory
    , time
    , bytestring
    , containers
    , monad-logger
    , warp
    , wai-app-static
    , fsnotify
    , stm
    , process
    , temporary
    , transformers
    , regex-tdfa

executable ssg
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base                  >= 4.12 && < 5
    , ssg
    , text
    , optparse-applicative
    , warp
    , wai
    , wai-app-static
    , filepath
    , directory
    , fsnotify
    , stm
    , monad-logger
